<resources>
    <string name="app_name">Greencycle</string>
    <string name="login_title">Bem Vindo a GreenCycle!</string>
    <string name="username">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="user_logged">User logged</string>
    <string name="error">Erro!</string>
    <string name="wrong_user">Usuário ou senha inválidos!</string>
    <string name="go_to_second_activity_button">Go To Second Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Usuário Inválido!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">Login realizado com sucesso!</string>
    <string name="attention">Atenção!!!!</string>
    <string name="empty_contact_alert_msg">As alterações não serão salvas. Você realmente deseja sair?</string>
    <string name="empty_request_alert_msg">O agendamento não será salvo. Você realmente deseja sair?</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="ainda_nao_tem_cadastro">Ainda não tem cadastro?</string>
    <string name="esqueceu_a_senha">Esqueceu a sua senha? Clique Aqui!</string>
    <string name="undo">Undo</string>
    <string name="remove_contact">Contato Removido!</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="add_contact">Add Contact</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="adicionar">Adicionar</string>
    <string name="textview4">TextView4</string>
    <string name="dados_da_empresa">Cadastro de Empresa</string>
    <string name="informacoes_retirada">As informações abaixo serão utilizadas pelo usuário para que ele possa identificá-lo no momento da retirada do pedido de coleta</string>
    <string name="nome_empresa">Nome da Empresa</string>
    <string name="email_empresa">Email</string>
    <string name="cnpj">CNPJ</string>
    <string name="telefone_empresa">Telefone (WhatsApp)</string>
    <string name="estado_empresa">Estado</string>
    <string name="cidade_empresa">Cidade</string>
    <string name="endere_empresa">Endereço</string>
    <string name="cep_empresa">CEP</string>
    <string name="pais_empresa">País</string>
    <string name="residuo_empresa">Detalhe os materiais que você trabalha.</string>
    <string name="residuo_cliente">Detalhe o material a descartar.</string>
    <string name="regiao_empresa">Qual região você atua? (Nacional ou Estadual)</string>
    <string name="bt_limpar_emp">Limpar</string>
    <string name="bt_salvar_emp">Complete ou Atualize seu Cadastro</string>
    <string name="bt_salvar_cliente">Complete ou Atualize seu Cadastro</string>
    <string name="bt_form_cliente">Salvar</string>
    <string name="bt_form_empresa">Salvar</string>
    <string name="informacoes_cliente">As informações abaixo serão utilizadas pela empresa de reciclagem no momento da retirada do seu pedido de coleta</string>
    <string name="nome_cliente">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="addButton">Adicionar</string>
    <string name="cadastro_usuario">Cadastrar Usuários</string>
    <string name="nome_user">Nome</string>
    <string name="email_user">Email</string>
    <string name="password_user">Password</string>
    <string name="tipo_user">Tipo (Empresa, Cliente ou Admin)</string>
    <string name="tipo_usuario">Tipo do Usuário</string>
    <string name="radiocliente">Cliente</string>
    <string name="radio_empresa">Empresa</string>
    <string name="radio_cliente">Cliente</string>
    <string name="radio_admin">Admin</string>
    <string name="cadastrar_user">Cadastrar</string>
    <string name="cad_user">Cadastrar</string>
    <string name="cadastrar_atualizar">Cadastrar / Atualizar</string>
    <string name="registrar_user">Cadastrar</string>
    <string name="update_users">Atualizar Usuários</string>
    <string name="bemvindo">Sua maneira inteligente de reciclar!</string>
    <string name="descricao_cliente">Aqui você pode realizar pedidos de coleta dos seus materiais recicláveis!</string>
    <string name="descricao_empresa">Aqui você pode realizar retiradas dos pedidos de coleta dos recicláveis!</string>
    <string name="solicitar_coleta_cliente">Solicitar Pedido de Coleta</string>
    <string name="solicitar_coleta">Aqui você pode solicitar o seu pedido de coleta escolhendo uma empresa de reciclagem mais perto de você!</string>
    <string name="retirar_coleta_empresa">Retirar Pedido de Coleta</string>
    <string name="dados_usuario">Cadastro de Usuário</string>
    <string name="telefone_whatsapp_cliente">Telefone (WhatsApp)</string>
    <string name="endereco_cliente">Endereço</string>
    <string name="administrar_cadastros">Administrar Cadastros</string>
    <string-array name="cadastros">
        <item>Contas de Usuários</item>
        <item>Cadastro de Clientes</item>
        <item>Cadastro de Empresas</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="descr_material_a_descartar">Detalhe o material a descartar, peso e volumes (quant.).</string>
    <string name="descr_material_a_coletar">Informe o nome e telefone de quem irá realizar a coleta.</string>
    <string name="informe_material_coleta">É muito simples! Apenas selecione uma empresa de reciclagem mais perto de você e clique no botão \"Enviar Solicitação\"!</string>
    <string name="informe_material_coleta_empresa">É muito simples realizar uma retirada de pedido de coleta! Apenas selecione o usuário mais perto de você e agende a retirada conforme o tipo de material reciclável que você trabalha!</string>
    <string name="agendar_retirada">Agendar Retirada</string>
    <string name="vidro">Vidro</string>
    <string name="metal">Metal</string>
    <string name="outros">Outros</string>
    <string name="papel">Papel</string>
    <string name="plastico">Plástico</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="enviar_solicitacao_cliente">Enviar Solicitação</string>


</resources>


