<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".controller.FormEmpresa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollViewEmp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEmp01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dados_da_empresa"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/textViewEmp02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/informacoes_retirada"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextNameEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nome_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextEmailEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_empresa"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextCnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cnpj"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextPhoneEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefone_empresa"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:phoneNumber="true"
                    tools:ignore="Deprecated,TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextUfEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/estado_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextCityEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cidade_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextAddressEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/endere_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextPostalEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cep_empresa"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:minHeight="48dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextCountryEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pais_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextResiduoEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/residuo_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextRegiaoEmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/regiao_empresa"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <Space
                        android:layout_width="40dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/buttonLimparEmp"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:text="@string/bt_limpar_emp" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/buttonSalvaEmp"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:text="@string/bt_salvar_emp"
                        tools:layout_editor_absoluteX="155dp"
                        tools:layout_editor_absoluteY="1027dp" />

                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>