<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6FFC9"
    android:backgroundTint="#C6FFC9"
    tools:context=".controller.UpdateUsers">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewUp8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_users"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#80B542" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <EditText
            android:id="@+id/editNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_user"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editEmailUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_user"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editPasswordUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_user"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/textViewUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_usuario"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#80B542"
            android:textSize="29sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TableRow
            android:layout_width="358dp"
            android:layout_height="102dp">

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="113dp"
                android:layout_height="99dp"
                app:srcCompat="@drawable/couple_recycling_png" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="109dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/caminhao_lixo" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/logogogogo" />
        </TableRow>

        <RadioGroup
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButtonClienteUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_cliente" />

            <RadioButton
                android:id="@+id/radioButtonEmpresaUp"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:text="@string/radio_empresa" />

            <RadioButton
                android:id="@+id/radioButtonAdminUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_admin" />

            <Space
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>